# claude-code-sourcemap

./: pyproject.toml
docs/superpowers/plans/: 2026-04-08-claude-code-tools-python-migration.md
python_tools/: README.md  __init__.py  base.py  registry.py  types.py
python_tools/tools/: __init__.py  edit.py  glob.py  grep.py  read.py  write.py
python_tools/utils/: __init__.py  file_ops.py  git_diff.py  path.py  subprocess.py
tests/: test_edit.py  test_file_ops.py  test_git_diff.py  test_glob.py  test_grep.py  test_integration.py  test_path.py  test_read.py  test_subprocess.py  test_write.py
